# gaussian-rational

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  install-smoke.yml  publish-test.yml  publish.yml  release.yml
gaussian_rational/: __init__.py
scripts/pdm/plugins/pdm_bin_dir/: pdm_bin_dir.py  pyproject.toml
tests/: test_gaussian_rational.py
