[build-system]
requires = ["pdm-backend>=2.4.0"]
build-backend = "pdm.backend"

[project]
name = "gaussian-rational"
version = "1.0.2"
description = "Exact complex-like scalars with rational real and imaginary parts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Sam McKelvie", email = "dev@emckelvie.org" },
]
keywords = ["math", "complex", "fraction", "gaussian-rational", "numeric", "exact", "imaginary", "rational", "scalar", "gaussian", "arithmetic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "typing-extensions>=4.8; python_version < '3.12'",
]

[project.urls]
Homepage = "https://github.com/mckelvie-org/gaussian-rational"
Source = "https://github.com/mckelvie-org/gaussian-rational/tree/v1.0.2"
"Bug Tracker" = "https://github.com/mckelvie-org/gaussian-rational/issues"
Changelog = "https://github.com/mckelvie-org/gaussian-rational/releases"

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "pdm>=2.27.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["gaussian_rational"]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["gaussian_rational"]

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check ."
typecheck = "mypy gaussian_rational"

[tool.pdm.plugin.bin-dir]
dirs = ["bin"]

