[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pdm-bin-dir"
version = "0.1.0"
description = "PDM plugin: prepend project bin/ to PATH before every pdm run invocation"
requires-python = ">=3.10"

[project.entry-points.pdm]
bin-dir = "pdm_bin_dir:plugin"

[tool.pdm.build]
includes = ["pdm_bin_dir.py"]
